# drake

./: .bazelproject  .bazelrc  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  WORKSPACE  deps.bzl  issue_10244_repro.sh  ldd_shared.txt  ldd_static.txt  ospray_ldd_bad.txt  ospray_ldd_good.txt  output_shared.txt  reg.ipynb  repro.sh  repro_min.sh  strace_shared.txt  strace_static.txt  tmp_replace.py  user.bazelrc
bindings/: BUILD.bazel  _bazel_workaround_4594.py  pydrake_bazel_4594.py
bindings/pybind11_ext/: BUILD.bazel  inference.h  numpy_dtypes_user.h  numpy_ufunc.h
bindings/pybind11_ext/test/: numpy_dtypes_user_py.cc  numpy_dtypes_user_test.py  test_numpy_dtypes_user.cpp  test_numpy_dtypes_user.py
bindings/pydrake/: BUILD.bazel  __init__.py  all.py  autodiff_types_pybind.h  autodiffutils_py.cc  automotive_py.cc  cindex_stuff.ipynb  common_py.cc  geometry_py.cc  interface_py.h  lcm_py.cc  math_py.cc  parsers.py  pydrake_pybind.h  rbtree.py  simple_bindings.cc  simple_bindings_test.py  symbolic_py.cc  symbolic_types_pybind.h  trajectories_py.cc  type_safe_index_py.h
bindings/pydrake/attic/: __init__.py
bindings/pydrake/automotive/: BUILD.bazel  maliput_py.cc
bindings/pydrake/common/: BUILD.bazel  __init__.py  _cpp_template.py  all.py  compatibility.py  cpp_param_pybind.cc  cpp_param_pybind.h  cpp_template.py  cpp_template_pybind.h  deprecation.py  deprecation_pybind.h  eigen_geometry_py.cc  eigen_geometry_pybind.h  module_py.cc  sorted_pair_pybind.h  type_pack.h  value_pybind.h  wrap_pybind.h
bindings/pydrake/doc/: BUILD.bazel  conf.py  gen_sphinx.py  index.rst  py_sig_names.pkl  pydrake.all.rst  pydrake.autodiffutils.rst  pydrake.automotive.rst  pydrake.common.all.rst  pydrake.common.rst  pydrake.examples.acrobot.rst  pydrake.examples.compass_gait.rst  pydrake.examples.pendulum.rst  pydrake.examples.rimless_wheel.rst  pydrake.examples.rst  pydrake.examples.van_der_pol.rst  pydrake.forwarddiff.rst  pydrake.geometry.rst  pydrake.lcm.rst  pydrake.maliput.all.rst  pydrake.maliput.api.rst  pydrake.maliput.dragway.rst  pydrake.maliput.rst  pydrake.manipulation.all.rst  pydrake.manipulation.planner.rst  pydrake.manipulation.rst  pydrake.math.rst  pydrake.multibody.all.rst  pydrake.multibody.benchmarks.acrobot.rst  pydrake.multibody.benchmarks.all.rst  pydrake.multibody.benchmarks.rst  pydrake.multibody.collision.rst  pydrake.multibody.inverse_kinematics.rst  pydrake.multibody.joints.rst  pydrake.multibody.multibody_tree.all.rst  pydrake.multibody.multibody_tree.math.rst  pydrake.multibody.multibody_tree.multibody_plant.rst  pydrake.multibody.multibody_tree.parsing.rst  pydrake.multibody.multibody_tree.rst  pydrake.multibody.parsers.rst  (+43 more)
bindings/pydrake/examples/: BUILD.bazel  _manipulation_station_extra.py
bindings/pydrake/geometry/: module_py.cc
bindings/pydrake/maliput/: BUILD.bazel  api_py.cc  dragway_py.cc  maliput_py.cc
bindings/pydrake/manipulation/: BUILD.bazel  planner_py.cc  simple_ui.py
bindings/pydrake/multibody/: BUILD.bazel  all.py  benchmarks_py.cc  collision_py.cc  inverse_kinematics_py.cc  joints_py.cc  math_py.cc  multibody_tree_py.cc  parsing_py.cc  plant_py.cc  rigid_body_plant_py.cc  rigid_body_py.cc  rigid_body_tree_py.cc  shapes_py.cc  text_sub.ipynb  tree_py.cc
bindings/pydrake/solvers/: BUILD.bazel  mathematicalprogram_py.cc  solver_interface_py.cc
bindings/pydrake/systems/: BUILD.bazel  __init__.py  _controllers_extra.py  _lcm.py  _lcm_extra.py  _sensors_extra.py  all.py  analysis_py.cc  controllers_py.cc  drawing.py  drawing_graphviz_example.py  framework_py.cc  issue_10255_repro.cc  (+16 more)
doc/: BUILD.bazel  Doxyfile_CXX.in  developers.rst  downstream_testing.rst  python_bindings.rst  serve_sphinx.py  serve_sphinx_base.py
examples/2d_gripper/: 061_foam_brick.sdf  2d_prismatic_gripper.sdf  2d_prismatic_gripper_simulation.py  2d_revolute_gripper.sdf  BUILD.bazel
systems/trajectory_optimization/: BUILD.bazel  contact_implicit_constraint.cc  contact_implicit_constraint.h  elastic_contact_implicit_direct_transcription.cc  elastic_contact_implicit_direct_transcription.h  generalized_constraint_force_evaluator.h  rigid_body_tree_multiple_shooting.cc  rigid_body_tree_multiple_shooting.h  rigid_body_tree_multiple_shooting_internal.h  timestep_integration_constraint.cc  timestep_integration_constraint.h
tmp/: BUILD.bazel  CMakeLists.txt  Makefile  OSPRayPathTracer.cxx  breathe_check.ipynb  build_bazel.sh  build_cmake.sh  cc.bzl  cc_regex.cc  cc_regex.h  cc_regex_py.cc  conda_first.txt  conda_second.txt  diff.patch  director_marker_repro.py  dl_first.txt  dl_second.txt  example.py  filt.py  get_api_difference.ipynb  hamr_scaled.urdf  nice_type_name_py.cc  no_srcs.txt  output_first.txt  output_last.txt  plant.txt  reformat_all.py  repro.py  repro.sh  repro_10818.cc  repro_cc.cc  repro_issue12073.py  repro_py.py  rgbd_ospray_minimal.cxx  run.sh  scene_graph_parser.cc  scene_graph_parser.h  strace_filt.py  strace_first.raw.txt  strace_first.sorted.txt  (+8 more)
tmp/gcc/: ldd_binary.txt  objdump_binary.txt
tmp/no_srcs/: build.txt  build_trim.txt  libdrake_example.txt
tmp/results/: objdump_binary.txt
tmp/test/: issue11138_test.py  scene_graph_parser_test.cc
tmp/with_srcs/: build.txt  build_trim.txt
tools/: BUILD  BUILD.bazel  bazel  drake.bzl  drake_deps.bzl  externals.bzl  externals_rules.bzl  ignition_math.BUILD  install.bzl  ipopt.BUILD  lcm.BUILD  pcl.bzl  sdformat.BUILD  vtk.bzl
tools/clion/: aspect.bzl  bazel_wrapper
tools/dev/: vtk.bzl
tools/external_data/: BUILD.bazel  README.md  expose_files.bzl  external_data.bzl  package.bzl  workspace_test.bzl  workspace_test.sh  workspace_writeable_test.sh
tools/install/: BUILD.bazel  install.bzl  install.py.in  install_test.py
tools/jupyter/: jupyter_py.bzl
tools/lint/: bazel_lint.bzl  clang_format_lint.py  drakelint.py  lint_repositories.bzl
tools/skylark/: alias.bzl  drake_cc.bzl  drake_lcm.bzl  drake_proto.bzl  drake_py.bzl  drake_sh.bzl  py_env_runner.py  pybind.bzl
tools/workspace/: BUILD.bazel  README.md  default.bzl  pypi.bzl  test.bzl  test_repositories.bzl
(+947 files in other folders)
