# -*- python -*-

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_py_binary(
    name = "sphinx_build",
    srcs = ["sphinx_build.py"],
)

drake_py_library(
    name = "serve_sphinx_base",
    srcs = ["serve_sphinx_base.py"],
    deps = [":sphinx_build"],
    imports = ["."],
)

drake_py_binary(
    name = "serve_sphinx",
    srcs = ["serve_sphinx.py"],
    deps = [
        ":serve_sphinx_base",
    ],
    data = glob([
        "**/*.rst",
    ]) + [
        "conf.py",
        "images/favicon.ico",
        "images/logo_w_text.jpg",
        "images/doxygen_instructions/visual_studio_build_targets.png",
        "sample_vimrc",
    ],
    # Some (currently disabled) Sphinx extensions try to reach out to the
    # network; we should fail-fast if someone tries to turn them on.
    tags = ["block-network"],
)

add_lint_tests(python_lint_exclude = [":conf.py"])
