load("//tools/skylark:pybind.bzl", "pybind_py_library")
load(":cc.bzl", "cc_shared_library")

cc_shared_library(
    name = "cc_regex_shared",
    srcs = ["cc_regex.cc"],
    hdrs = ["cc_regex.h"],
)
cc_library(
    name = "cc_regex_static",
    srcs = ["cc_regex.cc"],
    hdrs = ["cc_regex.h"],
)

# To exacerbate the issue.
pybind_py_library(
    name = "cc_regex_py",
    cc_so_name = "cc_regex",
    cc_srcs = ["cc_regex_py.cc"],
    cc_deps = [
        # # Static: No segfault
        # ":cc_regex_static",
        # Shared: Segfault
        ":cc_regex_shared",
    ],
    py_imports = ["."],
)

py_binary(
    name = "repro_issue12073",
    srcs = ["repro_issue12073.py"],
    # N.B. `torch` must come from an external virtualenv.
    deps = [":cc_regex_py"],
)
