load("//tools/skylark:pybind.bzl", "pybind_py_library")
load(":cc.bzl", "cc_shared_library")

# cc_library(  # This will NOT segfault
cc_shared_library(  # This will segfault
    name = "cc_regex",
    srcs = ["cc_regex.cc"],
    hdrs = ["cc_regex.h"],
)

# To exacerbate the issue.
pybind_py_library(
    name = "cc_regex_py",
    cc_so_name = "cc_regex",
    cc_srcs = ["cc_regex_py.cc"],
    cc_deps = [":cc_regex"],
    py_imports = ["."],
)

py_binary(
    name = "repro_issue12073",
    srcs = ["repro_issue12073.py"],
    # N.B. `torch` must come from an external virtualenv.
    deps = [":cc_regex_py"],
)
