# -*- python -*-

load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:6996.bzl", "adjust_labels_for_drake_hoist")
load("//tools/skylark:drake_py.bzl", "drake_py_exec")

package(default_visibility = ["//visibility:public"])

drake_py_exec(
    name = "drake_visualizer",
    args = [
        "--add_library_path=$(location @vtk//:lib_dir)",
        "--add_py_path=$(location @vtk//:lib_dir)/python2.7/site-packages",
        "$(location @drake_visualizer//:binary)",
    ],
    py_deps = adjust_labels_for_drake_hoist([
        "//drake/bindings/pydrake",
        "//drake/lcmtypes:lcmtypes_py",
        "@optitrack_driver//lcmtypes:py_optitrack_lcmtypes",
    ]),
    data = adjust_labels_for_drake_hoist([
        "//drake/examples:prod_models",
        "@drake_visualizer",
        "@drake_visualizer//:binary",
        "@vtk//:lib_dir",
    ]),
)

# === config_setting rules ===

config_setting(
    name = "with_gurobi",
    values = {"define": "WITH_GUROBI=ON"},
)

config_setting(
    name = "with_mosek",
    values = {"define": "WITH_MOSEK=ON"},
)

config_setting(
    name = "with_snopt",
    values = {"define": "WITH_SNOPT=ON"},
)

# IPOPT is an open-source solver, and is included in the Drake build by
# default. The IPOPT solver is irrelvant to some users of MathematicalProgram,
# so we provide a hidden switch to shut it off for developers who don't
# actually need it.  This is not a supported configuration. Use at your own
# risk: --define=NO_IPOPT=ON
config_setting(
    name = "no_ipopt",
    values = {"define": "NO_IPOPT=ON"},
)

# NLOPT is an open-source solver, and is included in the Drake build by
# default. The NLOPT solver is irrelvant to some users of MathematicalProgram,
# so we provide a hidden switch to shut it off for developers who don't
# actually need it.  This is not a supported configuration. Use at your own
# risk: --define=NO_NLOPT=ON
config_setting(
    name = "no_nlopt",
    values = {"define": "NO_NLOPT=ON"},
)

# SCS is an open-source solver, and is included in the Drake build by default.
# The SCS solver is irrelevant to some users of MathematicalProgram, so we
# provide a hidden switch to shut it off for developers who don't actually need
# it. This is not a supported configuration. Use at your own risk:
# --define=NO_SCS=ON
config_setting(
    name = "no_scs",
    values = {"define": "NO_SCS=ON"},
)

add_lint_tests()
