load("//tools/lint:lint.bzl", "add_lint_tests")
load(":workspace_test.bzl", "workspace_test", "glob_lint_sources")
load("//tools/skylark:meta.bzl", "all_files")

files = [
    ":all_files",
    "//tools/external_data/bazel_external_data:all_files",
    "//tools:all_files",
    "//tools/lint:all_files",
    "//tools/skylark:all_files",
    "//:skylark_files",
]

workspace_test(
    name = "bazel_pkg_test",
    data = files,
    workspace = "test/workspaces/bazel_pkg_test",
)

# For use with `workspace_test`.
exports_files(
    srcs = [
        "workspace_writeable_test.sh",
    ],
    visibility = ["//visibility:public"],
)

# # Ensure that we add all relevant files under `workspace`.
# # We should be able to glob them, as they are not a package.
# lint_extra = glob_lint_sources("test/workspaces")
# add_lint_tests(
#     bazel_lint_extra_srcs = lint_extra.bazel_srcs,
#     python_lint_extra_srcs = lint_extra.python_srcs,
# )

all_files()
