# -*- python -*-

package(default_visibility = ["//visibility:private"])

load("@drake//tools/skylark:drake_py.bzl", "drake_py_binary")
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_py_binary(
    name = "serve_sphinx",
    main = "serve_sphinx.py",
    srcs = [
        "serve_sphinx.py",
        "refresh_doc_modules.py",  # Source generation.
        "sphinx_pydrake.py",  # Plugin.
    ],
    deps = [
        "//doc:serve_sphinx_base",
        "//bindings/pydrake",
    ],
    imports = ["."],
    data = [
        "conf.py",
        "index.rst",
    ],
    # Some (currently disabled) Sphinx extensions try to reach out to the
    # network; we should fail-fast if someone tries to turn them on.
    tags = ["block-network"],
)

add_lint_tests(python_lint_exclude = [":conf.py"])
