# -*- python -*-

load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:pybind.bzl",
    "drake_pybind_library",
    "get_drake_pybind_installs",
    "get_pybind_library_dest",
)
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_test",
)
load("//tools/skylark:6996.bzl", "adjust_labels_for_drake_hoist")

package(default_visibility = adjust_labels_for_drake_hoist([
    "//drake/bindings/pydrake:__subpackages__",
]))

drake_py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    deps = [
        "//drake/bindings/pydrake:common_py",
        # TODO(eric.cousineau): This does NOT include direct dependnecies to submodule.
        # This is to preserve C++-like namespaces.
    ],
)

drake_pybind_library(
    name = "framework_py",
    cc_so_name = "framework",
    cc_srcs = ["framework_py.cc"],
    py_deps = [
        ":module_py",
    ],
)

drake_pybind_library(
    name = "primitives_py",
    cc_so_name = "primitives",
    cc_srcs = ["primtives_py.cc"],
    py_deps = [
        ":framework_py",
        ":module_py",
    ],
)

drake_pybind_library(
    name = "analysis_py",
    cc_so_name = "analysis",
    cc_srcs = ["analysis_py.cc"],
    py_deps = [
        ":framework_py",
        ":module_py",
    ],
)

PYBIND_LIBRARIES = [
    ":analysis_py",
    ":framework_py",
    ":primitives_py",
]

PY_LIBRARIES = [
    ":module_py",
]

drake_py_library(
    name = "systems",
    deps = PYBIND_LIBRARIES + PY_LIBRARIES,
)

install(
    name = "install",
    targets = PY_LIBRARIES,
    py_dest = get_pybind_library_dest(),
    deps = get_drake_pybind_installs(PYBIND_LIBRARIES),
)

drake_py_test(
    name = "systems_test",
    size = "small",
    srcs = ["test/systems_test.py"],
    deps = [":systems"],
)

add_lint_tests()
