# Backwards-compatibility aliases.

load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
)
load(
    "//tools/skylark:pybind.bzl",
    "get_pybind_package_info",
)

package(default_visibility = [
    "//bindings/pydrake:__subpackages__",
])

# This determines how `PYTHONPATH` is configured, and how to install the
# bindings.
PACKAGE_INFO = get_pybind_package_info("//bindings")

PY_LIBRARIES = [
    ":module_py",
]

# N.B. For simplicity, `common:module_py` will depend on this module.
drake_py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
)

# Roll-up alias.
alias(
    name = "util",
    actual = "//bindings/pydrake/common",
)

install(
    name = "install",
    targets = PY_LIBRARIES,
    py_dest = PACKAGE_INFO.py_dest,
    docs = ["wrapt/LICENSE"],
    doc_dest = "share/doc",
)

add_lint_tests()
