# -*- python -*-

load("//tools/workspace/gurobi:gurobi.bzl", "gurobi_test_tags")
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_test",
)
load("@drake//tools/install:install.bzl", "install")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/workspace/mosek:mosek.bzl", "mosek_test_tags")
load(":pybind.bzl",
    "drake_pybind_library",
    "get_drake_pybind_install")

package(default_visibility = ["//drake/bindings/pydrake:__subpackages__"])

PY_PKG_INSTALL = "pydrake"

# WARNING:
# Any common headers should be shared via a HEADER ONLY library.

drake_pybind_library(
    name = "common_py",
    cc_devel_deps = [
        "//drake/common",
    ],
    cc_srcs = ["common_py.cc"],
    py_srcs = [
        "__init__.py",
        "common.py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

# TODO(eric.cousineau): Ensure that this is not installed.
drake_cc_library(
    name = "autodiff_types",
    hdrs = ["autodiff_types_py.h"],
    # NOTE: We must violate IWYU here because we do not want this dependencies leaking in
    # at install time.
    # deps = [
    #     "//drake/common:autodiff",
    # ],
)

drake_pybind_library(
    name = "autodiffutils_py",
    cc_deps = [
        ":autodiff_types",
    ],
    cc_devel_deps = [
        "//drake/common:autodiff",
    ],
    cc_srcs = ["autodiffutils_py.cc"],
    py_srcs = [
        "autodiffutils.py",
        "forwarddiff.py",
    ],
    py_deps = [
        ":common_py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "rbtree_py",
    cc_deps = [
        ":autodiff_types",
    ],
    cc_devel_deps = [
        "//drake/multibody:rigid_body_tree",
    ],
    cc_srcs = ["rbtree_py.cc"],
    py_srcs = ["rbtree.py"],
    py_deps = [
        ":autodiffutils_py",
        ":common_py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

drake_pybind_library(
    name = "parsers_py",
    cc_devel_deps = [
        "//drake/multibody:parsers",
    ],
    cc_srcs = ["parsers_py.cc"],
    py_srcs = ["parsers.py"],
    py_deps = [
        ":common_py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

# TODO(eric.cousineau): Make private.
drake_cc_library(
    name = "symbolic_types_py",
    hdrs = ["symbolic_types_py.h"],
)

drake_pybind_library(
    name = "symbolic_py",
    cc_devel_deps = [
        "//drake/common:symbolic",
    ],
    cc_deps = [
        ":symbolic_types_py",
    ],
    cc_srcs = ["symbolic_py.cc"],
    py_srcs = ["symbolic.py"],
    py_deps = [
        ":common_py",
    ],
    py_pkg_install = PY_PKG_INSTALL,
)

install(
    name = "install",
    deps = get_drake_pybind_installs([
        ":common_py",
        ":autodiffutils_py",
        ":symbolic_py",
        ":rbtree_py",
        "//drake/bindings/pydrake/solvers",
    ]) + [
        "//drake:install"
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "pydrake",
    deps = [
        ":common_py",
        ":autodiffutils_py",
        ":symbolic_py",
        ":rbtree_py",
        "//drake/bindings/pydrake/solvers",
    ],
    visibility = ["//visibility:public"],
)

drake_py_test(
    name = "atlas_constructor_test",
    size = "small",
    srcs = ["test/testAtlasConstructor.py"],
    data = ["//drake/examples/atlas:models"],
    main = "test/testAtlasConstructor.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "common_test",
    size = "small",
    srcs = ["test/common_test.py"],
    data = ["//drake/examples/atlas:models"],
    main = "test/common_test.py",
    deps = [":pydrake"],
)

# `//:install` is run in this test to verify that once installed
# pydrake still works. This test is implemented in a separate file from
# common_test to be able to remove files in the sandbox without
# interfering with other tests. This test fails when bazel is run with
# `no_everything` because `libgurobi70.so` is not found [Issue #7283].
drake_py_test(
    name = "common_install_test",
    size = "medium",
    srcs = ["test/common_install_test.py"],
    data = ["//:install"],
    main = "test/common_install_test.py",
    tags = ["no_everything"],
    deps = [":pydrake"],
)

drake_py_test(
    name = "forward_diff_test",
    size = "small",
    srcs = ["test/forward_diff_test.py"],
    main = "test/forward_diff_test.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "mathematical_program_gurobi_solver_test",
    size = "small",
    srcs = ["test/gurobi_solver_test.py"],
    main = "test/gurobi_solver_test.py",
    tags = gurobi_test_tags(),
    deps = [":pydrake"],
)

drake_py_test(
    name = "mathematical_program_ipopt_solver_test",
    size = "small",
    srcs = ["test/ipopt_solver_test.py"],
    args = select({
        "//tools:no_ipopt": ["TestIpoptSolver.unavailable"],
        "//conditions:default": [],
    }),
    main = "test/ipopt_solver_test.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "mathematical_program_mosek_solver_test",
    size = "small",
    srcs = ["test/mosek_solver_test.py"],
    main = "test/mosek_solver_test.py",
    tags = mosek_test_tags(),
    deps = [":pydrake"],
)

drake_py_test(
    name = "mathematical_program_test",
    size = "small",
    srcs = ["test/mathematicalprogram_test.py"],
    main = "test/mathematicalprogram_test.py",
    tags = gurobi_test_tags(),
    deps = [":pydrake"],
)

drake_py_test(
    name = "pr2ik_test",
    size = "small",
    srcs = ["test/pr2_ik_test.py"],
    data = ["//drake/examples/pr2:models"],
    main = "test/pr2_ik_test.py",
    tags = ["snopt"],
    deps = [":pydrake"],
)

drake_py_test(
    name = "rbm_forward_kin_test",
    size = "small",
    srcs = ["test/rbt_transform_points_test.py"],
    data = ["//drake/examples/pendulum:models"],
    main = "test/rbt_transform_points_test.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "rbt_com_test",
    size = "small",
    srcs = ["test/testRBTCoM.py"],
    data = ["//drake/examples/pendulum:models"],
    main = "test/testRBTCoM.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "rbtik_test",
    size = "small",
    srcs = ["test/rbt_ik_test.py"],
    data = ["//drake/examples/pendulum:models"],
    main = "test/rbt_ik_test.py",
    tags = ["snopt"],
    deps = [":pydrake"],
)

drake_py_test(
    name = "symbolic_variables_test",
    size = "small",
    srcs = ["test/symbolic_test.py"],
    main = "test/symbolic_test.py",
    deps = [":pydrake"],
)

drake_py_test(
    name = "urdf_parser_test",
    size = "small",
    srcs = ["test/test_urdf_parser.py"],
    data = ["//drake/examples/pr2:models"],
    main = "test/test_urdf_parser.py",
    deps = [":pydrake"],
)

add_lint_tests()
