# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load(
    "@drake//tools/skylark:drake_proto.bzl",
    "drake_cc_proto_library",
    "drake_py_proto_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_proto_library(
    name = "matlab_rpc",
    srcs = [
        "matlab_rpc.proto",
    ],
)

drake_py_proto_library(
    name = "matlab_rpc_py",
    srcs = [
        "matlab_rpc.proto",
    ],
)

drake_cc_library(
    name = "call_matlab",
    testonly = 1,
    srcs = ["call_matlab.cc"],
    hdrs = ["call_matlab.h"],
    deps = [
        ":matlab_rpc",
        "//drake/common:essential",
    ],
)

drake_cc_library(
    name = "protobuf",
    srcs = ["protobuf.cc"],
    hdrs = ["protobuf.h"],
    deps = [
        "@protobuf",
    ],
)

drake_cc_library(
    name = "call_python",
    testonly = 1,
    srcs = ["call_python.cc"],
    hdrs = ["call_python.h"],
    deps = [
        ":call_matlab",
        "//drake/common:copyable_unique_ptr",
    ],
)

py_library(
    name = "call_python_client_lib",
    srcs = ["call_python_client.py"],
    imports = ["."],
    deps = [
        ":matlab_rpc_py",
    ],
)

py_binary(
    name = "call_python_client",
    srcs = ["call_python_client.py"],
    deps = [
        ":call_python_client_lib",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "call_matlab_test",
    deps = [
        ":call_matlab",
    ],
)

# Er... Can we just make this a binary, so that it is not run via "test"?
drake_cc_googletest(
    name = "call_python_test_impl",
    srcs = ["test/call_python_test.cc"],
    deps = [
        ":call_python",
    ],
    tags = ["manual"],
)

sh_test(
    name = "call_python_test",
    srcs = ["test/call_python_test.sh"],
    data = [
        ":call_python_test_impl",
        ":call_python_client",
    ],
    args = [
        "$(location :call_python_test_impl)",
        "$(location :call_python_client)",
    ],
)

py_binary(
    name = "call_python_example_shell",
    srcs = ["test/call_python_example_shell.py"],
    deps = [
        ":call_python_client_lib",
    ],
)

drake_cc_googletest(
    name = "protobuf_test",
    data = [
        "test/test_string.txt",
    ],
    deps = [
        ":protobuf",
    ],
)

add_lint_tests()
