# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//bindings/pydrake/third_party:forward_files.bzl", "forward_files")

load("//tools/workspace/models:repository.bzl", "mesh_files")

# This package is public so that other packages can refer to
# individual files in model from their bazel rules.
package(
    default_visibility = ["//visibility:public"],
)

MESHES = forward_files(
    srcs = ["@models//:" + x for x in mesh_files()],
    strip_prefix = "@models//:ycb/",
    dest_prefix = "",
    visibility = ["//visibility:private"],
)

# === test/ ===

drake_cc_googletest(
    name = "parse_test",
    srcs = ["test/parse_test.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

install_data(
    extra_prod_models = MESHES,
)

add_lint_tests()
